--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "start": "node scripts/build.js -entryPoint=src/wheel.js -servePath=menu/themes/",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "lint": "eslint src examples scripts tests --fix",
+    "lint": "eslint src menu scripts tests --fix",
     "build": "npm run lint && npm run test && npm run build-esm && npm run build-iife",
     "build-esm": "node scripts/build.js -entryPoint=src/wheel.js -esm",
     "build-iife": "node scripts/build.js -entryPoint=src/wheel.js -iife"
