--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "lint": "eslint src menu scripts tests --fix",
     "build": "npm run lint && npm run test && npm run build-esm && npm run build-iife",
     "build-esm": "node scripts/build.js -entryPoint=src/wheel.js -esm",
-    "build-iife": "node scripts/build.js -entryPoint=src/wheel.js -iife"
+    "build-iife": "node scripts/build.js -entryPoint=src/wheel.js -iife",
+    "deploy": "echo 'Deploying your project...'"
   },
   "engines": {
     "node": ">=14.8.0"
