--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Deploy project
-      run: npm run deploy
+    - name: run project
+      run: npm start
