--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,19 +1,23 @@
 name: Deploy to GitHub Pages
 
 on:
+  # run automatically every 24 hours
+  schedule:
+    - cron: "0 */24 * * *"
+  
+  # allows to manually run the job at any time
+  workflow_dispatch:
+  
+  # run on every push on the main branch
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-  schedule:
-    - cron: "0 */24 * * *"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 10
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -36,4 +40,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+        publish_dir: ./menu/themes
