--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,8 +36,18 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./menu/themes
+    - name: Copy files to docs directory
+      run: |
+        rm -rf docs
+        mkdir -p docs
+        cp -r menu/themes/* docs/
+
+    - name: Commit and push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add docs
+        git commit -m 'Deploy to GitHub Pages'
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
