--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,17 +36,17 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Copy files to docs directory
+    - name: Copy files to docs/menu/themes directory
       run: |
-        rm -rf docs
-        mkdir -p docs
-        cp -r menu/themes/* docs/
+        rm -rf docs/menu/themes
+        mkdir -p docs/menu/themes
+        cp -r menu/themes/* docs/menu/themes/
 
     - name: Commit and push changes
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add docs
+        git add docs/menu/themes
         git commit -m 'Deploy to GitHub Pages'
         git push
       env:
