--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,35 +19,21 @@ jobs:
     timeout-minutes: 10
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Build project
+        run: npm run build
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18.20.4'
+      - name: Copy files to docs directory
+        run: |
+          rm -rf docs
+          mkdir -p docs
+          cp -r menu/themes/* docs/
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Lint code
-      run: npm run lint
-      
-    - name: Build project
-      run: npm run build
-
-    - name: Copy files to docs/menu/themes directory
-      run: |
-        rm -rf docs/menu/themes
-        mkdir -p docs/menu/themes
-        cp -r menu/themes/* docs/menu/themes/
-
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add docs/menu/themes
-        git commit -m 'Deploy to GitHub Pages'
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add docs
+          git commit -m 'Deploy to GitHub Pages'
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
