--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,13 +30,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Lint code
+        run: npm run lint
+      
       - name: Build project
         run: npm run build
-
-      - name: Copy files to root directory
-        run: |
-          rm -rf *
-          cp -r menu/themes/* .
 
       - name: Commit and push changes
         run: |
