Add caching for Node.js modules and improve deployment error handling

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -27,6 +27,14 @@ jobs:
         with:
           node-version: '18.20.4'
 
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
         run: npm install
 
@@ -36,12 +44,11 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Commit and push changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .
-          git commit -m 'Deploy to GitHub Pages'
-          git push
+      - name: Deploy to GitHub Pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run deploy
+
+      - name: Handle errors
+        if: failure()
+        run: echo "An error occurred during the deployment process."
